--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,8 @@ code {
     box-sizing: border-box;   
    
    }
+
+   a {
+    color: inherit; /* blue colors for links too */
+    text-decoration: inherit; /* no underline */
+  }
